[package]
name = "prm"
version = "0.1.0"
authors = ["Commensalism"]
description = "CLI utility for removing directories with a progress bar"
readme = "README.md"
repository = "https://github.com/Commensalism1997/prm"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
